--- a/corcelli.css
+++ b/corcelli.css
@@ -6,7 +6,7 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      background: url('../fundoapp1.jpg') no-repeat center center fixed;
+      background: url('fundoapp1.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     .container {
